privacy_policy_az.html
Signed-off-by: emre-derebey <emre.derebey@gmail.com>

--- a/privacy_policy_az.html
+++ b/privacy_policy_az.html
@@ -1,49 +1,89 @@
+
 <!DOCTYPE html>
 <html lang="az">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Birka — Gizlilik Siyasəti</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Gizlilik Siyasəti – Birka</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      padding: 20px;
+      max-width: 800px;
+      margin: auto;
+      background-color: #f8f8f8;
+      color: #333;
+    }
+    h1, h2 {
+      color: #00529b;
+    }
+    h1 {
+      border-bottom: 2px solid #00529b;
+      padding-bottom: 5px;
+    }
+    a {
+      color: #00529b;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-  <h1>GİZLİLİK SİYASƏTİ</h1>
-  <h2>Birka – Avtomobil Servis Takip Tətbiqi</h2>
-  <p><strong>Son yeniləmə tarixi:</strong> 26 İyun 2025</p>
 
-  <h3>1. Toplanan Məlumatlar</h3>
-  <p>Birka tətbiqi <strong>heç bir şəxsi məlumat toplamır</strong>. Proqram yalnız sizin cihazınızda işləyir və sizin daxil etdiyiniz məlumatlar <strong>yalnız lokal olaraq cihazda saxlanılır</strong>.</p>
+  <h1>Gizlilik Siyasəti</h1>
+  <p><strong>Birka – Avtomobil Servis Takip Tətbiqi</strong><br>
+  <em>Son yenilənmə tarixi: 26 İyun 2025</em></p>
+
+  <h2>1. Toplanan Məlumatlar</h2>
+  <p>Birka tətbiqi istifadəçi tərəfindən daxil edilən bəzi məlumatları cihazda və ya istəyə bağlı olaraq uzaq serverdə (FTP) saxlaya bilər.</p>
+  <p>Toplana bilən məlumatlara aşağıdakılar daxil ola bilər:</p>
   <ul>
-    <li>Tətbiq internet bağlantısı tələb etmir (əgər reklam aktiv deyilsə).</li>
-    <li>Heç bir e-poçt, ad, telefon nömrəsi və ya digər şəxsi məlumat tələb olunmur.</li>
-    <li>Geliştirici və ya üçüncü şəxslər sizin məlumatlarınıza çıxış edə bilməz.</li>
+    <li>Avtomobil servisi ilə bağlı qeydlər (yağ dəyişikliyi, xərclər, tarixlər)</li>
+    <li>İstifadəçi tərəfindən daxil edilmiş qeydlər</li>
+    <li>Texniki məlumatlar (cihaz modeli, proqram versiyası – yalnız reklam və təhlükəsizlik məqsədilə)</li>
   </ul>
+  <p>Bu məlumatlar yalnız istifadəçinin seçimi ilə FTP serverə yüklənir və heç bir üçüncü şəxsə ötürülmür.</p>
 
-  <h3>2. Reklamlar və Analitika</h3>
-  <p>Tətbiqdə <strong>Google AdMob</strong> vasitəsilə reklamlar göstərilə bilər.<br>
-  Bu reklamlar Google tərəfindən idarə olunur və Google-un öz <a href="https://policies.google.com/privacy" target="_blank">məxfilik siyasətinə</a> tabedir.</p>
+  <h2>2. Məlumatların Saxlanması və Paylaşılması</h2>
+  <p>Tətbiq daxil edilmiş məlumatları lokal olaraq cihazda saxlayır. İstifadəçi seçərsə, məlumatlar təhlükəsiz bir FTP serverə yedəklənə bilər.</p>
+  <p>Tətbiq geliştiricisi bu məlumatları heç kimlə paylaşmır və kommersiya məqsədi ilə istifadə etmir.</p>
 
-  <h3>3. İcazələr (Permissions)</h3>
-  <p>Tətbiq aşağıdakı icazələrdən istifadə edə bilər:</p>
+  <h2>3. Reklam və Analitika</h2>
+  <p>Tətbiqdə Google AdMob platforması üzərindən reklamlar göstərilə bilər.</p>
+  <p>Bu reklamlar Google tərəfindən idarə olunur və aşağıdakı məlumatlar Google tərəfindən avtomatik toplanıla bilər:</p>
   <ul>
-    <li><strong>Yaddaş girişi</strong> – tətbiq məlumatlarını cihazınızda saxlamaq üçün.</li>
-    <li><strong>İnternet bağlantısı</strong> – yalnız reklamları göstərmək üçündür (əgər aktivdirsə).</li>
+    <li>IP ünvanı</li>
+    <li>Cihaz ID (reklam identifikatoru)</li>
+    <li>Coğrafi mövqe (təxmini)</li>
+    <li>Reklam qarşılıqlı əlaqələri</li>
   </ul>
-  <p>Başqa heç bir icazə və ya gizli proses yoxdur.</p>
+  <p>Google-un məxfilik siyasəti haqqında daha ətraflı məlumat üçün: 
+    <a href="https://policies.google.com/privacy" target="_blank">https://policies.google.com/privacy</a>
+  </p>
 
-  <h3>4. Məlumatların Paylaşılması</h3>
-  <p>Tətbiqin geliştiricisi istifadəçilərin məlumatlarını <strong>toplamır, analiz etməz və paylaşmaz</strong>.</p>
+  <h2>4. İcazələr</h2>
+  <p>Tətbiq aşağıdakı icazələri istifadə edə bilər:</p>
+  <ul>
+    <li><strong>Yaddaş girişi</strong> – tətbiq məlumatlarının cihazda saxlanması üçün</li>
+    <li><strong>İnternet bağlantısı</strong> – reklamların və FTP yedəkləməsinin işləməsi üçün</li>
+  </ul>
+  <p>Başqa heç bir icazə və ya cihaz funksiyası istifadə edilmir.</p>
 
-  <h3>5. Uşaqların Məxfiliyi</h3>
-  <p>Tətbiq 13 yaşdan aşağı olan uşaqlar üçün nəzərdə tutulmayıb və bu yaş qrupu üzrə heç bir məlumat toplanmır.</p>
+  <h2>5. Məlumatların Silinməsi</h2>
+  <p>İstifadəçilər istədikləri zaman proqram daxilindəki məlumatları silə bilər və FTP yedəklərini silmək üçün geliştiriciyə müraciət edə bilər.</p>
 
-  <h3>6. Siyasətin Yenilənməsi</h3>
-  <p>Bu gizlilik siyasəti zaman-zaman yenilənə bilər. Yeniləmə olduqda, yeni versiya Google Play səhifəsində yayımlanacaq və dərhal qüvvəyə minəcək.</p>
+  <h2>6. Uşaqların Məxfiliyi</h2>
+  <p>Bu tətbiq 13 yaşdan aşağı istifadəçilər üçün nəzərdə tutulmamışdır və bu yaş qrupuna yönəlik məlumat toplanmır.</p>
 
-  <h3>📩 Əlaqə</h3>
-  <p>Gizlilik siyasəti ilə bağlı suallarınız və ya təklifləriniz varsa, bizimlə əlaqə saxlaya bilərsiniz:</p>
-  <p><strong>E‑poçt:</strong> bakioilmarket@gmail.com</p>
+  <h2>7. Siyasətin Yenilənməsi</h2>
+  <p>Bu siyasət istənilən vaxt dəyişdirilə bilər. Dəyişikliklər tətbiqdə və Google Play səhifəsində yayımlanacaq və dərhal qüvvəyə minəcək.</p>
 
-  <hr>
-  <p>&copy; 2025 Birka Tətbiqi. Bütün hüquqlar qorunur.</p>
+  <h2>📩 Əlaqə</h2>
+  <p>Məxfilik siyasəti ilə bağlı suallarınız və ya təklifləriniz varsa, bizimlə əlaqə saxlaya bilərsiniz:</p>
+  <p><strong>E‑poçt:</strong> <a href="mailto:bakioilmarket@gmail.com">bakioilmarket@gmail.com</a></p>
+
 </body>
 </html>
